--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-component-library",
+  "name": "indermak",
   "version": "0.1.0",
   "scripts": {
     "start": "react-scripts start",
